# gg-generator

./: .gitignore  CHANGELOG.md  README.md  fnox.toml.example  justfile  mise.toml  pyproject.toml
.github/workflows/: changelog.yml
scripts/: release.py
src/gg_generator/: __init__.py  __main__.py  cli.py  gamertag.py  passwords.py
src/gg_generator/core/: export.py  models.py  store.py
src/gg_generator/identity/: address.py  builder.py  dob.py  randomuser.py  zippopotam.py
src/gg_generator/mail/: guerrillamail.py  providers.py
src/gg_generator/vault/: onepassword.py
tests/: test_address.py  test_dob.py  test_export.py  test_guerrillamail.py  test_onepassword.py  test_passwords.py  test_providers.py  test_randomuser.py  test_zippopotam.py
