[project]
name = "gg-generator"
version = "0.1.0"
description = "Gamertag generator with a live GuerrillaMail disposable inbox."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "faker>=40.23.0",
]

[project.scripts]
gg = "gg_generator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gg_generator"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
